--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le Case Di Città Futura - Riace</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -40,13 +40,14 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react": "https://esm.sh/react@19.1.1",
+    "react-dom/client": "https://esm.sh/react-dom@19.1.1/client",
     "react-router-dom": "https://esm.sh/react-router-dom@6.23.1",
     "react-day-picker": "https://esm.sh/react-day-picker@8.10.1",
     "react-day-picker/dist/style.css": "https://esm.sh/react-day-picker@8.10.1/dist/style.css",
     "date-fns": "https://esm.sh/date-fns@2.30.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
+    "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react-day-picker/": "https://aistudiocdn.com/react-day-picker@^9.11.0/",
     "vite": "https://aistudiocdn.com/vite@^7.1.7",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3"
@@ -56,6 +57,6 @@
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
